Created attachment 43646 [details] Screenshot illustrating the issue When scrolling a sheet with merged cells, a few pixel high stripe hidden behind the column header at scroll stops is randomly dropped or duplicated, corrupting font display in the merged cells. This was not the case in OpenOffice.org 3.2.1, but was introduced during the development cycle of 3.3.0 and was imported by LibreOffice as well. Only fonts in the merged cells are affected, not graphics. Text with line breaks in normal, not merged cells is not affected too, because Calc scrolls always row-wise. STR: 1. Select a cell range spanning some cell rows, merge selected cells. 2. Activate "wrap text automatically" for the merged cells to get line breaks. 3. Insert a (long) text and leave the cell. 4. Vertically scroll the sheet. Actual results: randomly dropped or duplicated horizontal stripes corrupting font display in the cell. Both normal and page break preview are affected, forcing redraw of the cell by resizing the window or scrolling horizontally clears the font corruption. Tested with LibreOffice 3.3.1 OOO330m19 (Build:8) tag libreoffice-3.3.1.2 on Ubuntu 10.10 and with the current LibreOffice package shipped with Ubuntu Natty. Downstream bug: <https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/720327>.
Created attachment 43647 [details] a simple testcase
I can confirm the issue with 3.4/recent master.
Related to "Bug 36391 - VIEWING Redraw problems"? [Reproducible] with reporter's sample and "LibreOffice 3.4.5 RC1 - WIN7 Home Premium (64bit) German UI [Build ID: OOO340m1 (Build:501)]" with 64 bit AMD Phenom II X4 955 Processor 3.2 GHz, 4GB RAM, Graphic Card: NVIDIA GeForce GT 430 Also with Server installation of Master "LOdev 3.5.0beta2+ – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 22905fb-b605e4f-4c1bcb5]" Win-x86@6- - pull time 2011-12-20 20:59:59) @Ilja Sekler: <http://wiki.documentfoundation.org/BugReport_Details#Version> Your version is? @Kohei: Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
> Related to "Bug 36391 - VIEWING Redraw problems"? Bug 36391 is rather a dupe of this one, but for Windows as well. Adjusting Platform from "Other - Linux (All)" to "All - All". > @Ilja Sekler: <http://wiki.documentfoundation.org/BugReport_Details#Version> Your version is? Version set to "LibO 3.3.0 release" according to <https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/720327/comments/3>.
David Tardon committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=e462a30d03c16aa4202f8d28ad52b15feb3d9255 fdo#34558 don't crash on undoing text frame removal The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
(In reply to comment #5) > David Tardon committed a patch related to this issue. > It has been pushed to "master": > > http://cgit.freedesktop.org/libreoffice/core/commit/ > ?id=e462a30d03c16aa4202f8d28ad52b15feb3d9255 > > fdo#34558 don't crash on undoing text frame removal > > > > The patch should be included in the daily builds available at > http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More > information about daily builds can be found at: > http://wiki.documentfoundation.org/Testing_Daily_Builds > Affected users are encouraged to test the fix and report feedback. Sorry for that, but due a typo in the title this message was posted to the wrong bug report. Therefore I also delete the 'whiteboard target'. Kind regards, Joren
Michael Stahl committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ed09e6b233eac719744b32daf0ea47cea423bcc3 Revert "fdo#34558 don't crash on undoing text frame removal" The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Removed the target again per comment 7
I tried it several times, but it was not reproducible for me with LO 4.4.0.3, Win 8.1. Can anybody still reproduce this issue? Or was this maybe already resolved in the meantime and can be closed?
I can't reproduce this bug with LibreOffice 4.2.8.2 as shipped in Fedora 20 either, so I think it is safe to assume that it was fixed a while ago. Resolving WORKSFORME.