fdo#34558 don't crash on undoing text frame removal

Change-Id: I48b95c6c0cbfb2f4c4b09cc90b254b96de40b3e9