svx/inc/svx/svdundo.hxx
@@ -20,6 +20,7 @@
 #ifndef _SVDUNDO_HXX
 #define _SVDUNDO_HXX
 
+#include <svl/lstner.hxx>
 #include <svl/solar.hrc>
 #include <svl/undo.hxx>
 #include <tools/gen.hxx>
@@ -252,8 +253,11 @@ public:
 //
 //************************************************************
 
-class SVX_DLLPUBLIC SdrUndoObjList : public SdrUndoObj {
+class SVX_DLLPUBLIC SdrUndoObjList : public SdrUndoObj, public SfxListener {
     bool                        bOwner;
+
+public:
+    TYPEINFO();
 
 protected:
     SdrObjList*                 pObjList;
@@ -270,6 +274,9 @@ protected:
     void SetView(SdrView* pView1, SdrPageView* pPageView1) { pView=pView1; pPageView=pPageView1; }
     bool IsOwner() { return bOwner; }
     void SetOwner(bool bNew);
+
+private:
+    virtual void Notify(SfxBroadcaster& rBroadcaster, const SfxHint& rHint);
 };
 
 //************************************************************
